[package]
name = "gax"
version = "0.1.0"
authors = ["Codecrafter_404 <codecrafter404@github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[[bin]]
name = "gax"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false, features = ["std", "alloc"]}
# esp32-nimble = {version = "0.6.1", default-features = false, features = ["std"]}
esp32-nimble = {default-features = false, features = ["std"], path="../esp32-nimble/"}
rand = "0.8.5" 
k256 = {version = "0.13.3", default-features = false, features = ["std", "ecdsa"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.120"

[build-dependencies]
embuild = "0.31.3"
color-eyre = "0.6.3"
rand = "0.8.5"
k256 = {version = "0.13.3", default-features = false, features = ["std", "ecdsa"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.120"
